# tracer

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
include/: camera.h  diffuse_material.h  glass_material.h  hittable.h  hittable_list.h  image.h  interactive_renderer.h  material.h  metal_material.h  non_copyable.h  path_tracer.h  quad.h  random.h  ray.h  sphere.h  texture.h  world.h
include/hittables/: box.h  hit_record.h  hittable.h  hittable_list.h  rect.h  sphere.h
include/materials/: diffuse_material.h  glass_material.h  light_material.h  material.h  metal_material.h  scatter_result.h
include/realtime/: imgui_funcs.h  interactive_camera.h  interactive_input.h  interactive_renderer.h  quad_shader.h  shader.h
include/tracing/: camera.h  path_tracer.h  world.h
src/: CMakeLists.txt  diffuse_material.cpp  glass_material.cpp  image.cpp  imgui_funcs.cpp  interactive_renderer.cpp  main.cpp  metal_material.cpp  path_tracer.cpp  quad.cpp  quad_shader.cpp  random.cpp  shader.cpp  sphere.cpp  texture.cpp  world.cpp
src/hittables/: box.cpp  rect.cpp  sphere.cpp
src/materials/: diffuse_material.cpp  glass_material.cpp  light_material.cpp  metal_material.cpp
src/realtime/: imgui_funcs.cpp  interactive_camera.cpp  interactive_input.cpp  interactive_renderer.cpp  quad.cpp  quad_shader.cpp  shader.cpp  texture.cpp
src/tracing/: path_tracer.cpp  world.cpp
